overflow fixed -  layout little things -  work on last card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,15 +16,15 @@ body {
 
 
 .wrapper {
-    height: calc(100%-50px);
+    height: calc(100% - 50px);
 }
 
 .sidebar {
     max-width: 70px;
 }
 
-main{
-    overflow-y: scroll;
+body #site_main{
+overflow-y: auto;
 }
 
 .img_20px{
